--- a/15-work-with-react/package.json
+++ b/15-work-with-react/package.json
@@ -2,7 +2,7 @@
   "name": "15-work-with-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://vasylykserhii.github.io/cursor_fe_hw/15-work-with-react/",
+  "homepage": "https://vasylykserhii.github.io/cursor_fe_hw/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
